[metadata]
name = pique
version = attr: pique.VERSION

url = https://github.com/ziyadedher/pique
author = Ziyad Edher
author_email = ziyad.edher@gmail.com
maintainer = Ziyad Edher
maintainer_email = ziyad.edher@gmail.com

classifiers = Development Status :: 1 - Planning, Intended Audience :: Science/Research, License :: OSI Approved :: MIT License, Natural Language :: English, Programming Language :: Python :: 3.6

description = High-level Raspberry Pi interface in Python for easy robotics prototyping and experimentation.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = pique, raspberry pi, rpi, interface

requires = pigpio
